2011-12-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Add missing files in EXTRA_DIST.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix dependencies in Makefiles.

	* Makefile.am,
	* doc/Makefile.am: Here.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Path to Olena logo.

	* doc/logo.jpg: Move...
	* doc/images/logo.jpg: ... here.

	* doc/Doxyfile.in,
	* milena/doc/Doxyfile.in,
	* scribo/doc/Doxyfile.in: Fix path.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix titles.

	* doc/contributors.dox,
	* doc/license.dox,
	* doc/license_commercial.dox,
	* doc/mainpage.dox: Here.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a description about Olena.

	* doc/Doxyfile.in: Add IMAGE_PATH entry.

	* doc/Makefile.am: Add image dependency.

	* doc/about.dox: New.

	* doc/doc.bib: New reference.

	* doc/images/olena_layers.png,
	* doc/images/olena_layers.svg: New.

	* doc/mainpage.dox: Rename section.

2011-10-28  Guillaume Lazzara  <z@lrde.epita.fr>

	Add more content in general documentation.

	* doc/Makefile.am: New dependencies.

	* doc/license_commercial.dox,
	* doc/mainpage.dox,
	* doc/modules_list.dox: More content.

	* doc/get_sources.dox,
	* doc/online_resources.dox: New.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Add details about licensing.

	* doc/Doxyfile.in
	* doc/Makefile.am
	* doc/license.dox
	* doc/license_commercial.dox
	* doc/mainpage.dox

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Doxyfile.in: Do not warn if undocumented.

2012-02-01  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new groups in Scribo documentation.

	* doc/Doxyfile.in: Refine settings.

	* doc/groups.dox: Add new groups.

	* scribo/core/component_set.hh,
	* scribo/core/document.hh,
	* scribo/core/line_links.hh,
	* scribo/core/line_set.hh,
	* scribo/core/object_groups.hh,
	* scribo/core/object_links.hh,
	* scribo/core/paragraph_set.hh: Set to a documentation group.

2012-02-01  Guillaume Lazzara  <z@lrde.epita.fr>
