@@ -1,3 +1,7 @@
+2011-12-12  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	* doc/Makefile.am: Add more missing files in EXTRA_DIST.
+
 2011-12-08  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* doc/Makefile.am: Add missing files in EXTRA_DIST.
